# XLZ-CXX-SDK

./: .gitignore  CMakeLists.txt  main.cpp  main.h  test.cpp
include/: MessageTools.h  TextCode.h  TextCodeParser.h  api.h  appinfo.h  constant.h  data.h  func.h  global.h  utils.h
src/: MessageTools.cpp  TextCode.cpp  api.cpp  appinfo.cpp  utils.cpp
